--- a/THANKS
+++ b/THANKS
@@ -127,6 +127,7 @@
   Nix				nix@esperi.org.uk
   Olaf Lenz			olenz@fias.uni-frankfurt.de
   Olly Betts			olly@muscat.co.uk
+  Patrice Fromy			patrice.fromy@u-psud.fr
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Biggar			paul.biggar@gmail.com
   Paul Eggert			eggert@twinsun.com
