--- a/THANKS
+++ b/THANKS
@@ -140,6 +140,7 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Richard Purdie		rpurdie@rpsys.net
   Richard Sandiford		richards@transitive.com
+  Robert Garron			Robert.Garron@Access3000.net
   Robert Millan			rmh@aybabtu.com
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
