--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-06-28  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	Finish adding alias for obsoleted AC_LIBTOOL_RC macro.
+
+	* libltdl/m4/libtool.m4: Add reminder comment concerning
+	aclocal-1.4 backwards compatibility.
+	* libltdl/m4/lt~obsolete.m4: Remove unnecessary AC_DEFUN.
+
 2009-06-27  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	Add alias for obsoleted AC_LIBTOOL_RC macro.
