--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-07-01  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net> (tiny change)
+	    Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	[CXX] Use correct export_dynamic_flag_spec for PE-COFF $hosts
+	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [cygwin*|mingw*|pw32*|cegcc*]:
+	Define export_dynamic_flag_spec as -Wl,--export-all-symbols here as well
+	(see commit 5f2bbb494a2753afb2878c399cfd8316b7403a5b).
+
 2009-06-29  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	[mingw] Improve sys_lib_search_path_spec detection.
