--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-08-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Remove __oline__ from macros, for less spurious configure diffs.
+	* libltdl/m4/libtool.m4 (_LT_ENABLE_LOCK, _LT_COMPILER_OPTION)
+	(_LT_COMPILER_C_O, LT_PATH_NM): Replace __oline__ instances with
+	$LINENO.
+	* NEWS: Update.
+
 2009-07-24  Roumen Petrov  <bugtrack@roumenpetrov.info>  (tiny change)
 
 	Fixup 'execute mode' test for w32.
