--- a/THANKS
+++ b/THANKS
@@ -110,6 +110,7 @@
   John R. Cary			cary@txcorp.com
   John Wolfe			jlw@sco.com
   Joseph Beckenbach III		jrb3@best.com
+  Lennart Poettering		lennart@poettering.net
   Karl Berry			karl@freefriends.org
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
