--- a/NEWS
+++ b/NEWS
@@ -43,6 +43,9 @@ New in 2.2.8 2009-??-??: git version 2.2.7a, Libtool team:
     extraction of convenience archives with a lock.
   - The Libtool macro files do not contain instances of __oline__ any more,
     easing merges for configure scripts that are added to version control.
+  - Fix ancient bug where "-Wc," was turned into "$wl" (typically "-Wl,")
+    when using the compiler driver to link programs. Now "-Wc," is stripped
+    just as it is when linking libraries through the compiler driver.
 
 * Miscellaneous changes:
 
