--- a/THANKS
+++ b/THANKS
@@ -88,6 +88,7 @@
   Daniel Reed			n@ml.org
   Daniel Richard G.		skunk@iSKUNK.ORG
   DJ Delorie			dj@delorie.com
+  Donn Washburn			n5xwb@comcast.net
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
   Eric Estievenart		eric@via.ecp.fr
