--- a/THANKS
+++ b/THANKS
@@ -110,6 +110,7 @@
   John Bowler			jbowler@acm.org
   John R. Cary			cary@txcorp.com
   John Wolfe			jlw@sco.com
+  Josh Hursey			jjhursey@open-mpi.org
   Joseph Beckenbach III		jrb3@best.com
   Lennart Poettering		lennart@poettering.net
   Karl Berry			karl@freefriends.org
