Control where win32 DLLs get installed.
* libltdl/config/general.m4sh (func_normal_abspath): New function.
(func_relative_path): Likewise.
* libltdl/config/ltmain.m4sh (func_mode_help): Document "-bindir".
(func_mode_link): Accept new "-bindir" option and use it, if
supplied, to place Windows DLLs.
* tests/bindir.at: New file for install tests using "-bindir".
* Makefile.am (TESTSUITE_AT): Add bindir.at.
* doc/libtool.texi (Link Mode): Update documentation.
* NEWS, THANKS: Update.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2009-09-12  Dave Korn  <dave.korn.cygwin@googlemail.com>
+
+	Control where win32 DLLs get installed.
+	* libltdl/config/general.m4sh (func_normal_abspath): New function.
+	(func_relative_path): Likewise.
+	* libltdl/config/ltmain.m4sh (func_mode_help): Document "-bindir".
+	(func_mode_link): Accept new "-bindir" option and use it, if
+	supplied, to place Windows DLLs.
+	* tests/bindir.at: New file for install tests using "-bindir".
+	* Makefile.am (TESTSUITE_AT): Add bindir.at.
+	* doc/libtool.texi (Link Mode): Update documentation.
+	* NEWS, THANKS: Update.
+
 2009-09-11  Akim Demaille  <demaille@gostai.com>
 
 	libtool: clean libconftest.a.
