--- a/THANKS
+++ b/THANKS
@@ -87,6 +87,7 @@
   Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
   Daniel Richard G.		skunk@iSKUNK.ORG
+  Dave Korn			dave.korn.cygwin@googlemail.com
   DJ Delorie			dj@delorie.com
   Donn Washburn			n5xwb@comcast.net
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
