--- a/THANKS
+++ b/THANKS
@@ -120,6 +120,7 @@
   Kurt D. Zeilenga		Kurt@OpenLDAP.Org
   Maciej Helminiak		dion2@wp.pl
   Maciej W. Rozycki		macro@linux-mips.org
+  Mahesh Narayanamurthi		mahesh.mach@gmail.com
   Manfred Weichel		Manfred.Weichel@pdb.siemens.de
   Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
