--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-11-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix quoting of AS, DLLTOOL, and OBJDUMP for the libtool script.
+	* libltdl/m4/ltoptions.m4 (AC_LIBTOOL_DLOPEN): Quote values of
+	$AS, $DLLTOOL, and $OBJDUMP, so they can contain arguments.
+	* THANKS: Update.
+	Report by Matthijs Kooijman.
+
 2009-09-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Initial support for the Cuda Compiler Driver on Linux.
