--- a/THANKS
+++ b/THANKS
@@ -126,6 +126,7 @@
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Marcel Loose			loose@astron.nl
   Mark Kettenis			kettenis@phys.uva.nl
+  Matthijs Kooijman		matthijs@stdin.nl
   Michael Haubenwallner		michael.haubenwallner@salomon.at
   Mike Gorchak			mike@malva.ua
   Mike Frysinger		vapier@gentoo.org
